Add StyleTTS2 dependencies to requirements.txt; enhance TTS training notebook with detailed setup, dataset definitions, and training configurations

--- a/notebooks/03_corpus_analysis.ipynb
+++ b/notebooks/03_corpus_analysis.ipynb
@@ -708,6 +708,120 @@
         "print(f\"  - selected_sentences.csv: Greedy-selected sentence set\")\n",
         "print(f\"  - summary.json: Summary statistics\")\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# このノートでやっていることと出力の読み方\n",
+        "\n",
+        "## 全体像\n",
+        "- **対象データ**: `jvs002` 話者の `parallel100`（100文）\n",
+        "- **目的**: 「この100文がどんな音素をどれだけカバーしているか」を可視化し、音素的に効率の良い文セット候補を作ること\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Cell 1–2: ファイル対応付け\n",
+        "- **Cell 1 出力**\n",
+        "  - `Num lab files: 100` → `lab/mon` に 100 個のモノラベルファイルがあり、parallel100 の100文すべてに対応していることを確認。\n",
+        "  - `Transcript file exists: True` → 転写テキスト `transcripts_utf8.txt` が存在することを確認。\n",
+        "- **Cell 2 出力**\n",
+        "  - `Loaded 100 lab files` / `Loaded 100 transcripts` → ラベルとテキストがどちらも100文分そろっている。\n",
+        "  - `Example:` 以下で、あるIDについて「テキスト」と「最初の10音素」「総音素数」をサンプル表示して、対応関係が正しく取れていることを確認。\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Cell 3: 文ごとの音素統計（DataFrame）\n",
+        "- **主な列**\n",
+        "  - `id` : 文ID（例: `VOICEACTRESS100_001`）\n",
+        "  - `num_phones` : その文に含まれる音素トークン数（長さ）\n",
+        "  - `num_unique_phones` : その文に含まれるユニーク音素の種類数\n",
+        "- **出力の意味**\n",
+        "  - `DataFrame shape: (100, 6)` → 100文 × 6列のテーブルができている。\n",
+        "  - `Statistics` で、音素列の長さ分布とユニーク音素数の分布がわかる。\n",
+        "    - 例: `mean num_phones ≈ 71.6` → 1文あたり平均 ~72 音素。\n",
+        "    - `mean num_unique_phones ≈ 21.2` → 1文あたり平均 ~21 種類の音素を含む。\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Cell 4: コーパス全体の音素頻度とカバレッジ\n",
+        "- **テキスト出力**\n",
+        "  - `Total phone tokens: 7156` → 100文全体で 7,156 音素トークン。\n",
+        "  - `Unique phone types: 37` → 異なる音素の種類は 37 種類。\n",
+        "  - `Top 20 most frequent phones:` → 母音 / 子音ごとの頻度と全体に占める割合。\n",
+        "    - 例: `o: 987 (13.79%)` → /o/ が全トークンの約14% を占める。\n",
+        "  - `Rare phones (frequency <= 5): 1` → 5回以下しか出現しないレア音素は 1 種類（ここでは `v`）。\n",
+        "- **図（2枚）**\n",
+        "  - 上段: 上位30音素の出現回数バーグラフ → どの音素がどれくらい多いか。\n",
+        "  - 下段: 音素頻度のヒストグラム → 「よく出る音素」と「たまにしか出ない音素」のばらつき。\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Cell 5: 音素カバレッジ貪欲法（最小文セットの探索）\n",
+        "- **アルゴリズム**\n",
+        "  - まだカバーされていない音素をできるだけ多く含む文を1つずつ足していく（貪欲法）。\n",
+        "- **出力の読み方**\n",
+        "  - `Total unique phones: 37` → 目標とする音素種類数。\n",
+        "  - `Selected sentences: 4` → 4文選ぶだけで全37種類の音素をカバーできた。\n",
+        "  - `Coverage: 100.00%` → 音素カバレッジ100% 達成。\n",
+        "  - `Selected sentence IDs:` 以下の4つが「音素的に効率の良い文」候補。\n",
+        "  - 図（2枚）:\n",
+        "    - 上段: 文数を増やしたときのカバレッジ(%) の推移。\n",
+        "    - 下段: それぞれの文が新しく追加した音素種類数。\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Cell 6–7: 文ごとの“情報量”と新規音素数\n",
+        "- **Cell 6**: 情報量の指標\n",
+        "  - `rare_phone_count` : その文に含まれる「レア音素」（頻度が下位20%）の種類数。\n",
+        "  - `diversity` : `num_unique_phones / num_phones` → 長さに対する多様性。\n",
+        "  - `avg_phone_freq` : その文に出てくる音素の平均頻度（小さいほどレア寄り）。\n",
+        "  - `info_score` : `rare_phone_count * diversity` という簡易スコア。\n",
+        "  - `Top 10 sentences by info_score` → レア音素が多く、多様性も高い「情報量の高い文」ランキング。\n",
+        "- **Cell 7**: 新規音素数と最終DataFrame\n",
+        "  - `new_phones_if_selected` : 貪欲法の順序でその文を選んだときに増える新規音素種類数。\n",
+        "  - `Sample rows (selected sentences)` → 貪欲法で選ばれた4文について、\n",
+        "    - `num_phones`（長さ）\n",
+        "    - `num_unique_phones`（種類数）\n",
+        "    - `rare_phone_count`（レア音素の種類数）\n",
+        "    - `new_phones_if_selected`（新規カバー音素数）\n",
+        "    - `info_score`（情報量スコア）\n",
+        "    を一覧で確認できる。\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Cell 8: 可視化（文ごとの特徴量分布）\n",
+        "- 4つのプロットで、文ごとの特徴を俯瞰:\n",
+        "  1. **Total Phones vs Unique Phones**\n",
+        "     - 縦軸: ユニーク音素数、横軸: 音素トークン数 → 長くて多様な文 / 短いが多様な文 などが見て取れる。\n",
+        "     - 赤いバツ印: 貪欲法で選ばれた文。\n",
+        "  2. **Information Score Distribution**\n",
+        "     - 情報量スコアの分布と、選ばれた文の平均スコア（赤破線）。\n",
+        "  3. **Rare Phones vs Diversity**\n",
+        "     - レア音素数と多様性の関係。右上にある点ほど「レアで多様」な文。\n",
+        "  4. **New Phones Added per Selected Sentence**\n",
+        "     - 選ばれた各文が何種類の新規音素を追加したか。\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## Cell 9: 結果の保存\n",
+        "- `outputs/corpus_analysis/jvs002/` 以下に解析結果を保存:\n",
+        "  - `corpus_analysis.csv` : 各文ごとの詳細な統計（このノートのDataFrame相当）。\n",
+        "  - `phone_frequencies.csv` : 音素ごとの頻度と相対頻度。\n",
+        "  - `selected_sentences.csv` : 貪欲法で選ばれた文セットのサマリ。\n",
+        "  - `summary.json` : 文数・音素数・カバレッジなどの要約値。\n",
+        "\n",
+        "---\n",
+        "\n",
+        "## ここまででわかること\n",
+        "- jvs002 parallel100 では **37種類** の音素が使われている。\n",
+        "- そのすべてをカバーするには、**4文** 選べば十分（音素的な意味での最小文セット候補）。\n",
+        "- 各文について、「長さ」「多様性」「レア音素の多さ」などを指標化してあり、\n",
+        "  - 「音素的に効率の良い文」\n",
+        "  - 「レア音素を多く含む文」\n",
+        "  - 「情報量スコアの高い文」\n",
+        "  を後続ステップ（F0 / メル特徴量と組み合わせた設計）で選びやすい状態になっている。\n"
+      ]
     }
   ],
   "metadata": {
