--- a/notebooks/utils/00_env_check.ipynb
+++ b/notebooks/utils/00_env_check.ipynb
@@ -26,7 +26,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3.12.9 ('.venv': venv)",
    "language": "python",
    "name": "python3"
   },
